@@ -1,0 +1,8 @@
+Title: Explicit mapping of clustered services can now be done with Wato.
+Level: 1
+Component: wato
+Version: 1.2.5i1
+Date: 1387534743
+Class: feature
+
+
