@@ -1864,7 +1864,12 @@ group = "monconf/" + _("Various")
 
 register_rule(group,
      "clustered_services_mapping",
-     TextAscii( title = _("Clustered services of") ),
+     TextAscii( 
+        title = _("Explicit mapping of Clusterd Services"),
+        help = _( "It's possible to have overlaping nodes between multiple clusters."
+                  "With this rule the direct mapping of services from nodes to the "
+                  "favored Cluster can be done."),
+     ),
      itemtype = "service",
      )
 
