@@ -102,6 +102,7 @@
             NOTE: Please refer to the migration notes!
     * 0244 New features for WATO page Backup & Restore...
     * 0382 Active HTTP check now supports multiline regexp matching...
+    * 0112 Explicit mapping of clustered services can now be done with Wato.
     * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
     * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
     * 0019 FIX: Fixed wording in WATO rule for MSSQL check
